# class_manager

./: .gitignore  Cargo.toml  README.md
src/: deepseek.rs  login.rs  main.rs
src/curd/: init.rs  mod.rs
src/curd/log/: delete.rs  read.rs  update.rs
src/curd/student/: delete.rs  mod.rs  read.rs  update.rs
web/: ai.html  index.html  log.html  login.html  operations.html
web/js/: ai.js  describe_data.js  log.js  login.js  main.js  operations.js
