[package]
name = "class_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.10.2", features = ["cookies"] }
chrono = "0.4.40"
reqwest = { version = "0.12.14", features = ["blocking"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
